--- a/main/index.html
+++ b/main/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="shortcut icon" type="imagex/png" href="./assets/js.png">
-    <title>Praticando Javascript</title>
+    <title>Praticando javascript</title>
 </head>
 
 <body>
